--- a/google-maps_weather.html
+++ b/google-maps_weather.html
@@ -33,7 +33,7 @@
             map = new google.maps.Map(document.getElementById('map'),
                 mapOptions);
 
-            google.maps.event.addListener(map, 'idle', getCoords);
+            google.maps.event.addListener(map, 'idle', getWeather);
 
             map.data.addListener('click', function (event) {
                 infowindow.setContent(
@@ -56,13 +56,9 @@
             google.maps.event.addListener(map, "click", function (event) {
                 latitude = event.latLng.lat();
                 longitude = event.latLng.lng();
-                getCoords();
+                getWeather();
             });
         }
-
-        var getCoords = function () {
-            getWeather();
-        };
 
         var getWeather = function () {
             gettingData = true;
